feat: create service to change the password
