# src/main/java/org/melsif/secretkeeper/web/credentials/CredentialController.java
@@ -1,6 +1,7 @@
 package org.melsif.secretkeeper.web.credentials;
 
 import lombok.RequiredArgsConstructor;
+import org.melsif.secretkeeper.credentials.Credential;
 import org.melsif.secretkeeper.credentials.CredentialSearchCriteria;
 import org.melsif.secretkeeper.credentials.CredentialService;
 import org.springframework.http.ResponseEntity;
@@ -20,7 +21,7 @@ class CredentialController implements CredentialsApi {
     @Override
     public ResponseEntity<CredentialDetails> newCredential(CredentialRequest credentialRequest) {
         var credential = credentialService.saveANewSecret(credentialRequest.getUrl(), credentialRequest.getUsername(), credentialRequest.getPassword());
-        return ResponseEntity.ok(credentialMapper.toCredential(credential));
+        return ResponseEntity.ok(credentialMapper.toCredentialDetails(credential));
     }
 
     @Override
@@ -28,8 +29,14 @@ class CredentialController implements CredentialsApi {
         var credentials = credentialService
             .fetchCredentials(new CredentialSearchCriteria(urlPattern, usernamePattern))
             .stream()
-            .map(credentialMapper::toCredential)
+            .map(credentialMapper::toCredentialDetails)
             .collect(Collectors.toUnmodifiableList());
         return ResponseEntity.ok(credentials);
+    }
+
+    @Override
+    public ResponseEntity<CredentialDetails> updateCredential(Long credentialId, @Valid NewCredentialData newCredentialData) {
+        final Credential updatedCredential = credentialService.changePassword(credentialId, newCredentialData.getNewPassword());
+        return ResponseEntity.ok(credentialMapper.toCredentialDetails(updatedCredential));
     }
 }
